--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
           integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.1.20/jquery.fancybox.min.css"/>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.1.20/jquery.fancybox.min.js"></script>
+    
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.1.20/jquery.fancybox.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
             integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
             crossorigin="anonymous"></script>
@@ -33,7 +34,7 @@
     <div class="prostam-wrapper">
         <header>
             <div class="section-content">
-                <div class="logo">
+                <div class="logo" id="start">
                     <a href="#">
                         <h2>Прибор "Простам"</h2>
                         <p>Территория мужского здоровья</p>
@@ -372,6 +373,7 @@
                     <input type="submit" class="btn-action" value="Заказать"/>
                 </form>
             </div>
+            <a href="#start" id="toTop"><i class="fa fa-arrow-circle-up" aria-hidden="true"></i></div>
         </div>
     </section>
     <footer>
